[attachments] add and store attachments when build completes